--- a/topino/ui/mainwindow.ui
+++ b/topino/ui/mainwindow.ui
@@ -20,7 +20,7 @@
      <x>0</x>
      <y>0</y>
      <width>944</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -1491,7 +1491,7 @@
          </attribute>
          <column>
           <property name="text">
-           <string>𝜑</string>
+           <string>φ</string>
           </property>
           <property name="font">
            <font>
@@ -1501,7 +1501,7 @@
          </column>
          <column>
           <property name="text">
-           <string>𝜔</string>
+           <string>ω</string>
           </property>
           <property name="font">
            <font>
